---------------------------------------------------------------------------------------------------
Version: 1.6.9
Date: 2025.?.??
  Changes:
    - Added arqad honey recipes
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 2025.8.18
  Changes
    - Vrauk mk02-4 exists now!
    - Fixed game crashing when loading save
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 2025.8.18
  Changes:
    - Removed non-py beacons
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 2025.8.18
  Changes:
    - Adjusted the balance again on the recipes.
---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 2025.8.18
  Changes:
    - Digosaurs should now work!
    - The Arqad recipe should be cheaper now
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 2025.8.15
  Changes:
    - Nerf sack and container cost
    - Sack and container return 100% of the time fr
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 2025.8.15
  Changes:
    - Fixed vegan alternative recipes not existing
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 2025.8.14
  Changes:
    - Fixed locale
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 2025.8.14
  Changes:
    - Removed a lot of old recipes that had no use essentially
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2025.8.14
  Changes:
    - Ulric non viable mass added
    - Zipir non viable fluid added