@@ -2,6 +2,8 @@
 Version: 1.6.9
 Date: 2025.?.??
   Changes:
+    - Changed the arqad recipes to use barrels! (breaking changes my beloved)
+    - Undid the bio-factory fluid pipe change
     - Added arqad honey recipes
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.8
